--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "api that handle user related excel data.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./src/tests/*.spec.js"
   },
   "author": "jcdev",
   "license": "ISC",
@@ -14,5 +14,12 @@
     "multer": "^1.4.5-lts.1",
     "winston": "^3.17.0",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "chai": "^5.1.2",
+    "mocha": "^11.1.0",
+    "rewire": "^7.0.0",
+    "sinon": "^19.0.2",
+    "sinon-chai": "^4.0.0"
   }
 }
